--- a/client/src/main/resources/application-dev.properties
+++ b/client/src/main/resources/application-dev.properties
@@ -11,3 +11,5 @@ server.port=8088
 spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+endpoints.spring.cloud.bus.refresh.enabled=true
+endpoints.spring.cloud.bus.env.enabled=true
