--- a/config-server/src/main/resources/application-dev.properties
+++ b/config-server/src/main/resources/application-dev.properties
@@ -27,3 +27,8 @@ spring.cloud.stream.bindings.springCloudBusOutput.group=config-service-queue
 spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+busrefresh.rest.client.connection.timeout.millis=300000
+busrefresh.rest.client.request.timeout.millis=120000
+busrefresh.rest.client.socket.timeout.millis=120000
+busrefresh.rest.client.max.connections.total=20
+busrefresh.rest.client.max.connections.per.route=20
